# sogis-plotinfo-service

./: .gitignore  Dockerfile  LICENSE  README.md  land_reg.py  oereb_info.py  plot_info.py  plot_owner.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: sogis-plotinfo-service.json
src/: land_reg.py  oereb_info.py  plot_info.py  plot_owner.py  server.py
src/templates/: detailed_info.html  plot_owner_captcha.html
