[project]
name = "sogis-plotinfo-service"
version = "v2025.01.27"
description = "PlotInfo service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.3",
    "werkzeug~=3.0.6",
    "Flask-JWT-Extended~=4.7.1",
    "flask-restx~=1.3.0",
    "requests~=2.32.3",
    "SQLAlchemy~=2.0.37",
    "psycopg2~=2.9.10",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
